<resources>
    <string name="app_name">ProtectU</string>
    <string name="profile">Profile</string>
    <string name="map">Map</string>
    <string name="error_enter_your_name">Enter your name</string>
    <string name="error_enter_your_surname">Enter your surname</string>
    <string name="error_enter_your_mail">Enter your mail</string>
    <string name="error_enter_a_new_message">Write a message</string>
    <string name="error_enter_your_password">Enter your password</string>
    <string name="error_email_not_valid">Enter a valid email</string>
    <string name="error_password_dont_match">Passwords don\'t match</string>
    <string name="error_email_in_use">Email already in use</string>
    <string name="error_weak_password">Weak password</string>
    <string name="error_invalid_email">Invalid email</string>
    <string name="error_invalid_contact">Invalid contact</string>
    <string name="error_invalid_password">Invalid password</string>
    <string name="error_number_of_people">Enter amount of people</string>
    <string name="error_name_not_valid">Please enter the missing person´s name</string>
    <string name="error_age_not_valid">Please enter a valid age</string>
    <string name="error_description_not_valid">Please put a description</string>
    <string name="error_image_not_valid">Please post a picture of the missing person</string>
    <string name="options">Options</string>
    <string name="logout">Logout</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email_sent">Email sent</string>
    <string name="registration_sucessful">Registration successful</string>
    <string name="registration_failed">Registration failed</string>
    <string name="see_you_next_time">See you next time</string>
    <string name="want_to_go_to_login">Want to go to the login page</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="lbl_languague">Language</string>
    <string name="btn_save">Save</string>
    <string name="backarrow">back</string>
    <string name="contact">\Contact:</string>
    <string name="email" translatable="false">E-mail:</string>
    <string name="loading_user_data">Loading user data…</string>
    <string name="loading_image">Loading image…</string>

    <string-array name="panic_values">
        <item>Slight</item>
        <item>Severe</item>
        <item>Urgent</item>
    </string-array>
    <string-array name="theme_values">
        <item>Choose Theme</item>
        <item>Light</item>
        <item>Dracula</item>
    </string-array>
    <string-array name="alarm_types">
        <item>Red</item>
        <item>Green</item>
    </string-array>
    <string name="About">About</string>
    <string name="Language">Language</string>
    <string name="notifications">Notifications</string>
    <string name="Customization">Customization</string>
    <string name="news">News</string>
    <string name="panic">Panic</string>
    <string name="Community">Community</string>
    <string name="missingBoard">Missing Board</string>
    <string name="Age">Age</string>
    <string name="searchTheName">Search a name..</string>
    <string name="Name">Name</string>
    <string name="publicationsInCommunity">Publications in community</string>
    <string name="publicationsInMissing">Publications in missing</string>
    <string name="numberOfPeople">Number of people</string>
    <string name="requestHelp">Request Help</string>
    <string name="newPost">New Post</string>
    <string name="description">Description</string>
    <string name="addImage1">Add Image (max. 1)</string>
    <string name="Create">Create</string>
    <string name="newMessage">New Message</string>
    <string name="message">Message</string>
    <string name="pick_image_intent_text">Select a photo</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="see_more">see more</string>
    <string name="question_app_will_restart">The app is going to restart, are you sure?</string>
    <string name="map_of_shelters">Map of shelters</string>
    <string name="theme">Theme</string>
    <string name="pay_attention">"Pay attention to the air alarms in your area"</string>
    <string name="type_alarm_message">Type alarm message</string>
    <string name="type_details">Type details</string>
    <string name="send_alert">Send alert</string>
    <string name="new_alarm">New Alarm</string>
    <string name="enable_notifications">Enable notifications</string>
    <string name="logging_in">Logging in...</string>
    <string name="registering">Registering...</string>
    <string name="areYouSureProgressLost">Are you sure you want to return? All progress will be lost</string>
    <string name="chooseExtras">Choose extras</string>
    <string name="add">Add</string>
    <string name="images_mandatory">Images are mandatory</string>
    <string name="limit_six_images">Cant have more than 6 images</string>
    <string name="loading_images">Loading image(s)...</string>
    <string name="error">Error</string>
    <string name="name_mandatory">Name is mandatory</string>
    <string name="description_mandatory">Description is mandatory</string>
    <string name="adding_bunker">Adding bunker</string>
    <string name="loading">Loading...</string>
    <string name="magnitude">of magnitude</string>
    <string name="deads">deads</string>
    <string name="missing">missing</string>
    <string name="richter_mandatory">Richter is mandatory</string>
    <string name="death_count_mandatory">Death count is mandatory</string>
    <string name="missing_count_mandatory">Missing count is mandatory</string>
    <string name="adding_earthquake">Adding earthquake</string>
    <string name="adding_fire">Adding fire</string>
    <string name="beds">beds</string>
    <string name="beds_count_mandatory">Beds count is mandatory</string>
    <string name="adding_hospital">Adding hospital</string>
    <string name="adding_war">Adding war</string>
    <string name="version">Version</string>
    <string name="group">Group</string>
    <string name="terms">Terms and Responsabilities</string>
    <string name="contacts">Contacts</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_anonymously">Login Anonymously</string>
    <string name="send_email">Send email</string>
    <string name="password">Password</string>
    <string name="show_password">Show password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="security_pin">Security pin</string>
    <string name="hide_password">Hide password</string>
    <string name="what_it_has">What it has?</string>
    <string name="swipe_to_see_all">Swipe to see all</string>
    <string name="create_bunker_details">Create bunker details</string>
    <string name="add_building_extras">Add Building Extras</string>
    <string name="add_images_max_six">Add images (max. 6)</string>
    <string name="_magnitude">Magnitude</string>
    <string name="deaths">Deaths</string>
    <string name="_missing">Missing</string>
    <string name="richter_scale">Magnitude in Richter\'s scale (0-10)</string>
    <string name="death_number">Death number</string>
    <string name="missing_number">Missing number</string>
    <string name="emergency_number">Emergency number</string>
    <string name="create_earthquake_details">Create earthquake details</string>
    <string name="create_fire_details">Create fire details</string>
    <string name="number_of_beds">Number of beds</string>
    <string name="create_hospital_details">Create hospital details</string>
    <string name="beds_number">Beds number</string>
    <string name="create_war_details">Create war details</string>
    <string name="cancel">Cancel</string>
    <string name="video">Video</string>
    <string name="myPublications">My Publications</string>
    <string name="noPublications">There are no Publications</string>
    <string name="make_verified">Make verified</string>
    <string name="title_of_the_new">Title of the News post</string>
    <string name="push_alert">Push alert</string>
    <string name="add_marker">Add marker</string>
    <string name="add_zone">Add zone</string>
    <string name="filter_map">Filter map</string>
    <string name="filter">Filter</string>
    <string name="choose_pin">Choose pin</string>
    <string name="new_post">New Post</string>
    <string name="title">Title</string>
    <string name="childrens">Childrens</string>
    <string name="adults">Adults</string>
    <string name="seniors">Seniors</string>
    <string name="show_results">Show Results</string>
    <string name="no_posts">There are no posts</string>
    <string name="delete_account">Delete account</string>
    <string name="automatic_theme">Automatic Theme</string>
    <string name="welcome1_text">Get the location of different events/facilities near you!</string>
    <string name="welcome2_Text">Easily ask for help with your panic button.</string>
    <string name="welcome3_text">Talk to the community and share information about events.</string>
    <string name="begin">Begin</string>
</resources>