<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_bottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    app:behavior_hideable="false"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    android:background="@drawable/layout_bg">

    <ImageView
        android:id="@+id/close"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_close_black_24dp"
        app:tint="?attr/textColor" />


    <TextView
        android:id="@+id/tt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/delete_account"
        android:textColor="?attr/textColor"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/passwordText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="15sp"
        android:textColor="?attr/textColor"
        android:textColorHint="?attr/textColor"
        android:backgroundTint="?attr/textColor"/>

    <CheckBox
        android:id="@+id/passwordCheckBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/show_password"
        android:textColor="?attr/textColor" />


    <Button
        android:id="@+id/deleteBtn"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/passwordCheckBox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/red_button"
        android:text="@string/delete_account"
        android:textColor="#FFFFFF" />

</RelativeLayout>