<?xml version="1.0" encoding="utf-8"?>
<!--XMl Layout for RecyclerView-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainPostID"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor">

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_arrow_back_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?attr/textColor" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/create_earthquake_details"
        android:textColor="?attr/textColor"
        android:textSize="22dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"/>

    <EditText
        android:id="@+id/earthquakeNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:drawablePadding="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/Name"
        android:maxLength="20"
        android:inputType="text"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:textColor="?attr/textColor"
        android:textColorHint="?attr/textColor"
        android:backgroundTint="?attr/textColor"/>

    <EditText
        android:id="@+id/earthquakeRichterEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawablePadding="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/richter_scale"
        android:maxLength="20"
        android:inputType="number"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/earthquakeNameEditText"
        android:textColor="?attr/textColor"
        android:textColorHint="?attr/textColor"
        android:backgroundTint="?attr/textColor"/>

    <EditText
        android:id="@+id/earthquakeDeathCountEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawablePadding="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/death_number"
        android:maxLength="20"
        android:inputType="number"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/earthquakeRichterEditText"
        android:textColor="?attr/textColor"
        android:textColorHint="?attr/textColor"
        android:backgroundTint="?attr/textColor"/>

    <EditText
        android:id="@+id/earthquakeMissingCountEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawablePadding="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/missing_number"
        android:maxLength="20"
        android:inputType="number"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/earthquakeDeathCountEditText"
        android:textColor="?attr/textColor"
        android:textColorHint="?attr/textColor"
        android:backgroundTint="?attr/textColor"/>

    <LinearLayout
        android:id="@+id/emergencyNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/earthquakeMissingCountEditText"
        app:layout_constraintTop_toBottomOf="@+id/earthquakeMissingCountEditText">

        <com.hbb20.CountryCodePicker
            android:id="@+id/contactPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:ccp_textSize="15sp"
            android:layout_gravity="center_vertical"
            app:ccp_defaultNameCode="PT"
            android:layout_weight="0"
            android:ellipsize="end"
            android:maxLines="1"
            app:ccpDialog_textColor="?attr/textColor"
            app:ccp_contentColor="?attr/textColor"/>

        <EditText
            android:id="@+id/contactEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:hint="@string/emergency_number"
            android:inputType="number"
            android:textSize="15sp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColorHint="?attr/textColor"
            android:backgroundTint="?attr/textColor"
            android:textColor="?attr/textColor"/>

    </LinearLayout>

    <TextView
        android:id="@+id/locationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@id/earthquakeMissingCountEditText"
        app:layout_constraintTop_toBottomOf="@+id/emergencyNumber" />


    <TextView
        android:id="@+id/imageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawablePadding="10dp"
        android:hint="@string/add_images_max_six"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@id/locationTextView"
        app:layout_constraintTop_toBottomOf="@+id/locationTextView"
        app:layout_constraintEnd_toEndOf="@id/earthquakeMissingCountEditText"
        android:textColorHint="?attr/textColor"/>


    <androidx.cardview.widget.CardView
        android:id="@+id/imageCard"
        android:layout_width="175dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:elevation="20dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageTextView"
        android:backgroundTint="?attr/backgroundColorSelected">

        <ImageView
            android:id="@+id/imagesImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_camera_black_24dp"
            app:tint="?attr/textColor" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/createButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="@color/primary_button"
        android:text="@string/Create"
        android:textColor="#FFFFFF"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageCard" />


</androidx.constraintlayout.widget.ConstraintLayout>